updated for functioning weathercall returns imperial

--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-3 bg-light">
-          <h4 class="mt-1">Search for a City:</h4>
+          <h4 class="mt-1">Search by City or zip code:</h4>
           <div class="input-group mb-3">
             <input
-              id="enter-city"
+              id="cityInput"
               type="text"
               class="form-control"
               placeholder="Enter a city"
               aria-label="Enter a city"
             />
             <div class="input-group-append">
-              <button class="btn btn-primary" type="button" id="search-button">
+              <button class="btn btn-primary" type="button" id="searchBtn">
                 <i class="fas fa-search"></i>
               </button>
             </div>
