added API call for UVindex

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               placeholder="Enter a city"
               aria-label="Enter a city"
             />
-            <div class="input-group-append">
+            <div class="input-group-prepend">
               <button class="btn btn-primary" type="button" id="searchBtn">
                 <i class="fas fa-search"></i>
               </button>
