--- a/index.html
+++ b/index.html
@@ -90,6 +90,14 @@
       </div>
     </div>
 
+
+    <footer id='foot' class="feet d-none">
+      <p>Made by <a href="https://github.com/jgault87/weather-machine">JJ Gault </a><img src=""></p>
+  
+    </footer>
+    
+    
+
     <script src="assets/script.js"></script>
   </body>
 </html>
