--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
               </button>
             </div>
           </div>
+          <button class="btn text-white cardset mb-5" type="button" id="clear-history">Clear history</button>
+                <form id="history"></form>
         </div>
         <div id='results' class="col-lg-9 d-none">
           <div class="row mr-0">
