--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="col-lg-11 card m-3" id="todayWeather">
               <div class="card-body">
                 <h3 id="city-name" class="city-name align-middle"></h3>
-                <img id="current-pic" alt="" />
+                <p id="weather-icon" alt="" />
                 <p id="temp"></p>
                 <p id="humidity"></p>
                 <p id="windSpeed"></p>
