--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
           </div>
           <button class="btn text-white cardset mb-5" type="button" id="clear-history">Clear history</button>
                 <form id="history"></form>
+                <ul id="search-list"></ul>
         </div>
         <div id='results' class="col-lg-9 d-none">
           <div class="row mr-0">
