--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               </button>
             </div>
           </div>
-          <button class="btn text-white cardset mb-5" type="button" id="clear-history">Clear history</button>
+          <button class="btn text-white cardset mb-5" type="button" id="clear-history">Clear All</button>
                 <form id="history"></form>
                 <ul id="search-list"></ul>
         </div>
