--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 
   <body>
     <header class="container-fluid text-center bg-dark text-white p-5">
-      <h1>Weather Dashboard</h1>
+      <h1>Weather Machine</h1>
+      <h3 id="time"></h3>
     </header>
 
     <div class="container-fluid">
@@ -48,9 +49,10 @@
               </button>
             </div>
           </div>
-          <button class="btn text-white cardset mb-5" type="button" id="clear-history">Clear All</button>
+          <button class="btn text-white cardset mb-5" type="button" id="clear-history">Clear All</button><hr>
                 <form id="history"></form>
                 <ul id="search-list"></ul>
+                <hr>
         </div>
         <div id='results' class="col-lg-9 d-none">
           <div class="row mr-0">
