--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </head>
 
   <body>
-    <header class="container-fluid text-center bg-dark text-white p-5">
+    <header id="switch" class="headerstyle container-fluid text-center bg-dark text-white p-5">
       <h1>Weather Machine</h1>
       <h3 id="time"></h3>
     </header>
